Fix incorrect mine count bug on mobile

--- a/style.css
+++ b/style.css
@@ -159,10 +159,6 @@ p.darker {
   color: #aaa;
 }
 
-p.glow {
-  animation: glow 1s infinite alternate-reverse;
-}
-
 @keyframes glow {
   from { text-shadow: 0 0 20px rgb(255, 255, 0); }
   to { text-shadow: 0 0 20px rgb(255, 115, 0); }
